Fixes to fetching posts, small tweaks to spacing in timelines.

--- a/index.css
+++ b/index.css
@@ -487,7 +487,8 @@
 
 /* src/history/timeline.css */
 .timeline-container {
-  margin-right: 0.4em;
+  margin-right: 0.8em;
+  margin-bottom: 1.3em;
 }
 .timeline-container > .sub-thread {
   margin-top: 1.6em;
