--- a/src/history/timeline.css
+++ b/src/history/timeline.css
@@ -1,5 +1,6 @@
 .timeline-container {
-  margin-right: 0.4em;
+  margin-right: 0.8em;
+  margin-bottom: 1.3em;
 }
 
 .timeline-container > .sub-thread {
